--- a/Pathfinder/app.config
+++ b/Pathfinder/app.config
@@ -2,17 +2,10 @@
 <configuration>
     <configSections>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="Pathfinder.My.MySettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+            <section name="GoldBank.My.MySettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
-    <connectionStrings>
-        <add name="Pathfinder.My.MySettings.MyDatabase_1ConnectionString"
-            connectionString="Data Source=|DataDirectory|\MyDatabase#1.sdf;Persist Security Info=True;Encryption Mode=PPC2003 Compatibility"
-            providerName="Microsoft.SqlServerCe.Client.3.5" />
-        <add name="Pathfinder.My.MySettings.anarchxConnectionString"
-            connectionString="Data Source=|DataDirectory|\anarchx.sdf;Persist Security Info=True;Encryption Mode=PPC2003 Compatibility"
-            providerName="Microsoft.SqlServerCe.Client.3.5" />
-    </connectionStrings>
+    <connectionStrings />
     <system.diagnostics>
         <sources>
             <!-- This section defines the logging configuration for My.Application.Log -->
@@ -36,10 +29,10 @@
         </sharedListeners>
     </system.diagnostics>
     <userSettings>
-        <Pathfinder.My.MySettings>
+        <GoldBank.My.MySettings>
             <setting name="splashscreen" serializeAs="String">
                 <value>True</value>
             </setting>
-        </Pathfinder.My.MySettings>
+        </GoldBank.My.MySettings>
     </userSettings>
 </configuration>
