Added missing resource files. Fixed a crash with the new players list widow popup.

--- a/Pathfinder/GoldBank.vbproj
+++ b/Pathfinder/GoldBank.vbproj
@@ -218,12 +218,8 @@
     <Content Include="Resources\d100.bmp">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="Resources\info2.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Resources\info3.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
+    <Content Include="Resources\info2.png" />
+    <Content Include="Resources\info3.png" />
     <Content Include="Resources\platinumbars.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
